# NikolaChess

./: .gitattributes  .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  DEVELOPMENT.md  HARDWARE.md  LICENSE  Makefile  Mind.toml  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: build-runtimes.yml  build.yml  release.yml
benchmark/: fortress.mind  latency.mind
data/: .gitkeep
docs/: API.md  ARCHITECTURE.md  IMPLEMENTATIONS.md  NNUE.md  SYZYGY.md  derivation.md
lib/: .gitkeep  README.md  libmind_cpu_macos-arm64.dylib  libmind_cpu_macos-x64.dylib  libmind_metal_macos-arm64.dylib  libmind_metal_macos-x64.dylib  libmind_webgpu_macos-arm64.dylib  libmind_webgpu_macos-x64.dylib
releases/: README.md
releases/v3.20.0/linux-x64/: mindc
runtime-build/: .gitignore  build_macos.sh  build_windows.bat  nikola_auth.h  protection.h  runtime_cpu.c
scripts/: endgame_counts.py  install.ps1  install.sh  mindc-build  setup.sh
src/: abdada.mind  bitboard.cpp  bitboard.h  board.cpp  board.h  board.mind  cpu_features.cpp  cpu_features.h  cuda_eval.cu  deep_eval.mind  distributed.cpp  distributed.h  draw_db.mind  draw_eval.mind  draw_tt.mind  endgame.mind  endgame_db.mind  engine_options.cpp  engine_options.h  evaluate.cu  evaluate_stub.cpp  fathom_bridge.cpp  fortress_conv.mind  gpu_eval.cpp  gpu_eval.h  halfka.mind  lib.mind  lichess_bot.mind  lmr.mind  main.cpp  main.mind  micro_batcher.cpp  micro_batcher.h  move64.mind  move_generation.cu  movegen64.mind  multipv_search.cpp  multipv_search.h  nnue.cpp  nnue.h  (+37 more)
src/api/: arena.mind  cecp.mind  chesscom.mind  cloud.mind  games.mind  http.mind  lichess.mind  mod.mind  opening.mind  players.mind  syzygy.mind  tcp.mind  uci.mind  unified.mind  websocket.mind
src/bench/: framework.mind  runner.mind
src/eval/: eval_improvements.mind
src/fathom/src/: tbprobe.c
src/gpu/: batched_nnue.mind
src/search/: hybrid.mind  improvements.mind  mcts.mind
tests/: bitboard_board_test.cpp  bookgen_tests.cpp  distributed_search_test.cpp  dtzprobe_tests.cpp  eval_test.cpp  fathom_stub.cpp  move_generation_test.cpp  nnue_large_test.cpp  search_test.cpp  syzygy_path_option_test.cpp  tbprobe_tests.cpp  test_endgame_counts.py  test_halfka.mind  test_perft.mind  test_search.mind  uci_test.cpp
tools/: analysis.mind  benchmark.mind  book_builder.mind  cuda_bench.mind  data_gen.mind  datahub.mind  elo_testing.mind  llm_consensus.py  model_tools.mind  perft.mind  pgn_tools.mind  syzygy.mind  tune_lmr.mind
